fix: subGoal 생성 시, 요청/응답에 slotNum 필드 추가